--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,12 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <title>React App</title>
+    <title>Rural Senses</title>
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_170,w_170,f_auto,b_white,q_auto:eco,dpr_1/r6wxmf8rups5hr1qhynw"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
